{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 63,
  "lineage": "fefe19d8-e9ab-3daa-0796-c9916466823e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fee1d6b1c8c71f14",
            "arn": "arn:aws:ec2:us-east-1:992757690557:elastic-ip/eipalloc-0fee1d6b1c8c71f14",
            "association_id": "eipassoc-055e4ee86b9ebb19f",
            "domain": "vpc",
            "id": "eipalloc-0fee1d6b1c8c71f14",
            "instance": "i-0023a8d32e6deb530",
            "network_border_group": "us-east-1",
            "network_interface": "eni-070d31822356535a0",
            "private_dns": "ip-10-0-1-34.ec2.internal",
            "private_ip": "10.0.1.34",
            "public_dns": "ec2-52-207-23-113.compute-1.amazonaws.com",
            "public_ip": "52.207.23.113",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "trend-project-jenkins-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trend-project-jenkins-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.jenkins_profile",
            "aws_iam_role.jenkins_role",
            "aws_instance.jenkins",
            "aws_internet_gateway.main",
            "aws_key_pair.jenkins_key",
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083e865b97bdf1c1b",
            "arn": "arn:aws:ec2:us-east-1:992757690557:instance/i-0023a8d32e6deb530",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "trend-project-jenkins-profile",
            "id": "i-0023a8d32e6deb530",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "trend-project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-070d31822356535a0",
            "private_dns": "ip-10-0-1-34.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.34",
            "public_dns": "ec2-54-165-55-168.compute-1.amazonaws.com",
            "public_ip": "54.165.55.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:992757690557:key/f008b0a8-2e1b-4faf-9ca7-af440193bfb3",
                "throughput": 125,
                "volume_id": "vol-006c909e03d2d1401",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dcc238f627f73997",
            "tags": {
              "Environment": "dev",
              "Name": "trend-project-jenkins-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trend-project-jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d3549c563a6addc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.jenkins_profile",
            "aws_iam_role.jenkins_role",
            "aws_key_pair.jenkins_key",
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992757690557:internet-gateway/igw-082124a410d593c2b",
            "id": "igw-082124a410d593c2b",
            "owner_id": "992757690557",
            "tags": {
              "Environment": "dev",
              "Name": "trend-project-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trend-project-igw"
            },
            "vpc_id": "vpc-0dcb1cc83d3f10338"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992757690557:route-table/rtb-01c908f4e6ff9e21a",
            "id": "rtb-01c908f4e6ff9e21a",
            "owner_id": "992757690557",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082124a410d593c2b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "trend-project-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trend-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcb1cc83d3f10338"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8aef213578a2c0d",
            "route_table_id": "rtb-01c908f4e6ff9e21a",
            "subnet_id": "subnet-0dcc238f627f73997"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992757690557:security-group/sg-01d3549c563a6addc",
            "description": "Security group for Jenkins server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d3549c563a6addc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "trend-project-jenkins-sg",
            "name_prefix": "",
            "owner_id": "992757690557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "trend-project-jenkins-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trend-project-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcb1cc83d3f10338"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992757690557:subnet/subnet-0643d93096997d5f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0643d93096997d5f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992757690557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "trend-project-private-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trend-project-private-subnet"
            },
            "vpc_id": "vpc-0dcb1cc83d3f10338"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992757690557:subnet/subnet-0dcc238f627f73997",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcc238f627f73997",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992757690557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "trend-project-public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trend-project-public-subnet"
            },
            "vpc_id": "vpc-0dcb1cc83d3f10338"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992757690557:vpc/vpc-0dcb1cc83d3f10338",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-020ae183547db60b1",
            "default_route_table_id": "rtb-06cf8d8d3d58745c2",
            "default_security_group_id": "sg-0eb22ee891d8128ab",
            "dhcp_options_id": "dopt-052e8d28e578350ef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dcb1cc83d3f10338",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06cf8d8d3d58745c2",
            "owner_id": "992757690557",
            "tags": {
              "Environment": "dev",
              "Name": "trend-project-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "trend-project-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}